# RTracer

./: README.md
Models/: bot_light.stl  ceil.stl  cube.stl  cubes.stl  dave10.stl  dave11.stl  dave13.stl  dave14.stl  dave3.stl  dave4.stl  dave5.stl  dave7.stl  dave8.stl  dave9.stl  floor.stl  ico.stl  light1.stl  light_ball.stl  side1.stl  side2.stl  side3.stl  side4.stl  suzanne.stl  suzanne2.stl  suzanne3.stl  suzanne4.stl  suzanne5.stl  suzanne_eyes.stl  suzanne_noeyes.stl  test_tris.stl  top_light.stl  top_light1.stl  top_light2stl.stl
RTracerExampleProject/Models/: dave1.stl  dave12.stl  dave2.stl  dave6.stl  dave_cube.stl  side1.stl  side4.stl  suzanne_mud.stl  test_plane.stl  top_light3.stl  top_light_big.stl
RTracerExampleProject/r_tracer_examples/: Cargo.toml
RTracerExampleProject/r_tracer_examples/src/: main.rs
Textures/HdrStudioCarFluorescentBlaze001/: HdrStudioCarFluorescentBlaze001_HDR_3K.exr
Textures/HdrStudioProductSoftLight001/: HdrStudioProductSoftLight001_HDR_2K.exr
r_tracer/: Cargo.toml
r_tracer/benches/: benches.rs
r_tracer/src/: lib.rs  main.rs
r_tracer/src/datatypes/: color.rs  hit_point.rs  material.rs  vector2.rs  vector2d.rs  vector3.rs  vector3d.rs
r_tracer/src/spacial/: bvh.rs  camera.rs  mesh.rs  mesh_object.rs  ray.rs  scene.rs  sphere.rs  tri.rs
r_tracer/src/utilities/: file_utilities.rs  frame_handler.rs  model_loader.rs  postprocessing.rs  tracer_io.rs
